--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
   "name": "chill",
   "version": "1.0.0",
+  "type": "module",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
-    "generate": "nuxt generate",
-    "deploy": "scp -r ./dist siyu:/home/pi/work/static-servers/chill"
+    "dev": "nuxt dev",
+    "generate": "nuxt generate"
   },
   "dependencies": {
-    "color-thief-node": "^1.0.3",
-    "core-js": "^3.6.5",
-    "node-fetch": "^2.6.1",
-    "nuxt": "^2.14.6",
+    "@nuxtjs/tailwindcss": "6.14.0",
+    "nuxt": "4.2.0",
     "youtube-player": "^5.5.2"
   },
-  "devDependencies": {
-    "@nuxtjs/tailwindcss": "^3.1.0",
-    "autoprefixer": "9",
-    "postcss": "7",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+  "devDepedencies": {
+    "color-thief-node": "^1.0.4"
   }
 }
